vhdl_syntax/src/parser/snapshots/vhdl_syntax__parser__error_recovery__tests__label_without_statement.snap
---
source: vhdl_syntax/src/parser/error_recovery.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
architecture arch of ent is
begin
    p :
end arch;


== tree ==
DesignFile
  DesignUnit
    ArchitectureBody
      ArchitecturePreamble
        Keyword(Architecture)
        Identifier 'arch'
        Keyword(Of)
        Name
          NameDesignatorPrefix
            Identifier 'ent'
        Keyword(Is)
      DeclarationStatementSeparator
        Keyword(Begin)
      ArchitectureStatementPart
        BlockStatement
          StmtLabel
            Identifier 'p'
            Colon
      ArchitectureEpilogue
        Keyword(End)
        Identifier 'arch'
        SemiColon
  Eof

== diagnostics ==
3:8 Expected(Token([Keyword(Block), Keyword(Process), Keyword(Component), Keyword(Configuration), Keyword(Entity), Keyword(For), Keyword(If), Keyword(Case), Keyword(Assert), Keyword(With), Identifier, LtLt, StringLiteral, CharacterLiteral]))
